syntax = "proto3";

package io.restorecommerce.tax;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";

/*
* Microservice definition.
*/
service Service {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (TaxListResponse);
  rpc Create (TaxList) returns (TaxListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (TaxList) returns (TaxListResponse);
  rpc Upsert (TaxList) returns (TaxListResponse);
}

message Deleted {
  string id = 1;
}

message TaxList {
  repeated Tax items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message TaxListResponse {
  repeated TaxResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message TaxResponse {
  Tax payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message Tax {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string country_id = 3;
  double rate = 4;
  string variant = 5;
  string type_id = 6;
}
